added new method
